frontend/srcs/components/NavBar/NavBar.css
@layer page-name-breadcrumb {
  .nav-bar .page-name-breadcrumb {
    align-items: flex-start;
    display: inline-flex;
    flex-direction: column;
    gap: 2px;
    padding: 5px 0px 10px 0px;
  }

  .nav-bar .text-wrapper {
    color: #ffffff;
    font-family: "Poppins", sans-serif;
    font-weight: 200;
    font-style: normal;
    font-size: 16.8px;
    font-weight: 500;
    letter-spacing: 0;
    line-height: normal;
    margin-top: 0px;
    bottom: 3px;
    position: relative;
    width: fit-content;
  }

  .nav-bar .breadcumb {
    align-items: flex-end;
    display: inline-flex;
    flex: 0 0 auto;
    gap: 4.32px;
    justify-content: center;
    position: relative;
  }

  .nav-bar .div {
    color: #1f78ff;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 14px;
    letter-spacing: 0;
    line-height: 10.8px;
    margin-top: -0.54px;
    position: relative;
    white-space: nowrap;
    width: fit-content;
  }

  .nav-bar .text-wrapper-2 {
    color: #ffffff;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 14px;

    letter-spacing: 0;
    line-height: 9.7px;
    position: relative;
    white-space: nowrap;
    width: fit-content;
  }

  .nav-bar .text-wrapper-3 {
    color: #ffffff;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-size: 14px;
    font-style: normal;
    letter-spacing: 0;
    line-height: 10.8px;
    margin-top: -0.54px;
    position: relative;
    white-space: nowrap;
    width: fit-content;
  }
}

/* search-bar */
.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;

  background-color: #000000;
  border-bottom: 0.537px solid #3c424d;
}

.page-name-breadcrumb {
  display: flex;
  align-items: center;
}

.search-bar {
  display: flex;
  justify-content: center;
  align-items: center;
}

.right-side-menu {
  display: flex;
  align-items: center;
  gap: 10px;
}

.search-bar {
  position: relative;
}

.SearchList {
  position: absolute;
  top: 100%;
  padding: 5px;
  left: 3;
  z-index: 1;
}

.right-side-menu {
  position: relative;
}

.logout-button-down {
  position: absolute;
  top: 100%;
  padding: 20px 0px 0px 64px;
  left: 1;
  z-index: 1;
}

.show-notification-bar {
  border: 0px !important;
  background-color: transparent !important;
  border-radius: 0px !important;
  width: max-content;
  height: max-content;
  z-index: 1;
}

@media (max-width: 630px) {
  .centered-notification-bar {
    position: fixed;
    top: 3400%;
    right: 5000%;
    transform: translate(-57%, -50%);
    z-index: 1000; /* Ensure it's above other elements */
  }
}

.drop-down-notifications {
  all: unset !important;
}

.notification-button {
  margin-top: 3px;
  width: 20px;
  height: 20px;
  z-index: 999999;
  position: relative;
}

.notification-button:hover {
  cursor: pointer;
  opacity: 0.8;
}

@media (max-width: 630px) {
  .show-notification-bar {
    position: absolute;
    left: 0%;
    right: 0%;
    z-index: 1;
  }
}

@media (min-width: 1150px) {
  .logout-button-down {
    padding: 20px 0px 0px 142px;
  }
}

@media (max-width: 750px) {
  .page-name-breadcrumb {
    background-color: red !important;
    display: none !important;
  }
}

